manifests/testapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
  namespace: testapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: hashicorp/http-echo
        args:
          - "-text=It works!"
        ports:
          - containerPort: 5678
