manifests/testapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
  namespace: testapp
spec:
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
